<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_settings_title">Liquid Lounge</string>
    <string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Quick gestures to perform actions on your device</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="lockscreen_summary">Customize weather service or change shortcuts</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="misc_summary">App ops security and block alarms or wakelocks</string>
    <string name="navbar_title">Navigation</string>
    <string name="navbar_summary">Force on screen navbar and customize buttons</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Control device lights and heads up notifications</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Other menus and control on secure lock screen</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Resize columns and rows and speed up pulldown</string>
    <string name="recents_title">Recents panel</string>
    <string name="recents_summary">Position clear button and some immersive style</string>
    <string name="statusbar_title">Status bar</string>
    <string name="statusbar_summary">Hide or show system icons and network traffic</string>
    <string name="buttons_title">Buttons</string>
    <string name="heads_up_title">Heads up</string>
    <string name="misc_short_title">Misc</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="enable_mtp_dirtyhack_title">MTP instead Charging</string>
    <string name="enable_mtp_dirtyhack_summary">Enable MTP instead Charging after connect to PC</string>
    <string name="wakelock_blocker_title">Wakelock blocker</string>
    <string name="wakelock_blocker_summary">Block system wakelocks</string>
    <string name="wakelock_blocker_save">Save</string>
    <string name="wakelock_list_header">Available wakelocks</string>
    <string name="wakelock_blocker_reload">Reload</string>
    <string name="wakelock_blocker_warning_title">Proceed with caution</string>
    <string name="wakelock_blocker_warning">Blocking wakelocks have the potential to cause instability, crashes or data loss</string>
    <string name="alarm_blocker">Alarm blocker</string>
    <string name="alarm_blocker_title">Enable</string>
    <string name="alarm_blocker_summary">Block alarms while screen off</string>
    <string name="alarm_blocker_save">Save</string>
    <string name="alarm_list_header">Available alarms</string>
    <string name="alarm_blocker_reload">Reload</string>
    <string name="alarm_blocker_warning_title">Proceed with caution</string>
    <string name="alarm_blocker_warning">Blocking alarms have the potential to cause instability, crashes or data loss.</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="recents_show_membar_title">Memory bar</string>
    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="ls_weather_title">Lock screen weather</string>
    <string name="weather_show_weather_title">Show weather</string>
    <string name="weather_show_weather_summary">Enable to show weather information</string>
    <string name="weather_show_location_title">Show location</string>
    <string name="fp_wake_and_unlock_title">Wake and unlock</string>
    <string name="fp_wake_and_unlock_summary">Disabling this will make fingerprint sensor only work when screen is on</string>
    <string name="statusbar_items_title">Status bar items</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="lockscreen_tuner_title">Lock screen shortcuts</string>
    <string name="status_bar_quick_qs_pulldown">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">Pulldown status bar from right side to show QS panel</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lock screen</string>
    <string name="lockscreen_battery_info_title">Lock screen battery info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lock screen while charging</string>
    <string name="ime_switcher_notify">Selector notification</string>
    <string name="ime_switcher_notify_summary">Display input method selector notification</string>
    <string name="battery_saver_color_title">Warning color</string>
    <string name="battery_saver_color_summary">Enable orange status - navigation bars when battery saver is activated</string>
    <string name="battery_light_settings">Battery lights</string>
    <string name="network_traffic_state_title">Network traffic</string>
    <string name="network_traffic_state_summary">Show net activity in status bar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="notification_light_settings">Notifications lights</string>
    <string name="adb_notify">ADB notification</string>
    <string name="adb_notify_summary">Display a notification when android debugging is enabled</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="brightness_icon_title">Brightness icon</string>
    <string name="brightness_icon_summary">Show a brightness icon to the right of the brighness slider to adjust autobrightness</string>
    <string name="status_bar_logo_title">Liquid logo</string>
    <string name="status_bar_logo_summary">Allow Liquid logo on your status bar</string>
    <string name="lockscreen_qs_disabled_title">No QS when secured</string>
    <string name="lockscreen_qs_disabled_summary">Disable quick settings tiles on secured lock screen</string>
    <string name="ticker_mode_title">Notification ticker</string>
    <string name="status_bar_custom_header_title">Enable</string>
    <string name="daylight_header_pack_title">Header image collection</string>
    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="unit_percent">\u0025</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_pick_title">Select header image</string>
    <string name="custom_header_pick_summary">Select a local or remote image</string>
    <string name="custom_header_title">Custom header image</string>
    <string name="file_header_select_title">Select local image</string>
    <string name="file_header_select_summary">Select image from storage</string>
    <string name="qs_show_mini_title">Mini mode</string>
    <string name="qs_show_mini_summary">Make the header images smaller</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="less_notification_sounds_title">Notification sounds</string>
    <string name="less_notification_sounds_summary">Play the notification sound of each app only once per set time period</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lock screen after face unlocking</string>
    <string name="statusbar_clock_title">Clock options</string>
    <string name="notification_sound_vib_screen_on_title">Notification sound if screen is on</string>
    <string name="lock_clock_font_title">Clock font options</string>
    <string name="lock_clock_font_summary">Change the default font of the lock screen clock widget</string>
    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
    <string name="battery_style_title">Battery icon</string>
    <string name="show_battery_percent_title">Show percentage</string>
    <string name="notification_guts_kill_app_button_title">Kill app button</string>
    <string name="notification_guts_kill_app_button_summary">Show a kill app button in notification shade</string>
	<string name="incall_notifications_vibrate">Less annoying in-call notifications</string>
    <string name="incall_notifications_vibrate_summary">Vibrate instead of playing a sound for in-call notifications</string>
    <string name="qs_panel_alpha_title">QS panel opacity</string>
    <string name="qs_animations_cat">QS animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="statusbar_weather_title">Status bar weather</string>
    <string name="lockscreen_item_category">Lock screen items</string>
    <string name="show_lockscreen_clock_title">Clock widget</string>
    <string name="show_lockscreen_clock_summary">Change the clock widget\'s visibility</string>
    <string name="show_lockscreen_date_title">Date widget</string>
    <string name="show_lockscreen_date_summary">Change the date\'s visibility underneath the clock widget</string>
    <string name="show_lockscreen_alarm_title">Alarm text</string>
    <string name="show_lockscreen_alarm_summary">Change the alarm text\'s visibility underneath the clock widget</string>
</resources>