<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 The Nitrogen Project
     Copyright (C) 2017 The Liquid Remix Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_title">

    <Preference
        android:title="@string/lockscreen_tuner_title" >
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.LockscreenActivity"/>
    </Preference>

    <Preference
        android:key="lockscreen_weather"
        android:title="@string/ls_weather_title"
        android:fragment="com.liquid.liquidlounge.fragments.LockScreenWeatherSettings"/>

    <ListPreference
        android:key="lock_clock_fonts"
        android:title="@string/lock_clock_font_title"
        android:dialogTitle="@string/lock_clock_font_dialog_title"
        android:entries="@array/lock_clock_fonts_entries"
        android:entryValues="@array/lock_clock_fonts_values"
        android:summary="@string/lock_clock_font_summary"
        android:persistent="false" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_media_metadata"
        android:title="@string/media_art_title"
        android:summary="@string/media_art_summary"
        android:defaultValue="false" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="true" />

    <com.liquid.liquidlounge.preferences.SecureSettingSwitchPreference
        android:key="face_auto_unlock"
        android:title="@string/face_auto_unlock_title"
        android:summary="@string/face_auto_unlock_summary"
        android:defaultValue="false" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="fp_wake_and_unlock"
        android:title="@string/fp_wake_and_unlock_title"
        android:summary="@string/fp_wake_and_unlock_summary"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="fingerprint_success_vib"
        android:title="@string/fprint_sucess_vib_title"
        android:summary="@string/fprint_sucess_vib_summary"
        android:persistent="false" />
		
	<PreferenceCategory
     android:title="@string/lockscreen_item_category"/>
	 
	<com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="show_lockscreen_clock"
        android:title="@string/show_lockscreen_clock_title"
        android:summary="@string/show_lockscreen_clock_summary"
        android:defaultValue="true" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="show_lockscreen_date"
        android:title="@string/show_lockscreen_date_title"
        android:summary="@string/show_lockscreen_date_summary"
        android:defaultValue="true" />
		
    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="show_lockscreen_alarm"
        android:title="@string/show_lockscreen_alarm_title"
        android:summary="@string/show_lockscreen_alarm_summary"
        android:defaultValue="true" />
	 
</PreferenceScreen>
