<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 The Nitrogen Project
     Copyright (C) 2017 The Liquid Remix Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quicksettings_title">

    <com.liquid.liquidlounge.preferences.SecureSettingSwitchPreference
        android:key="qs_show_brightness"
        android:title="@string/qs_brightness_slider_title"
        android:summary="@string/qs_brightness_slider_summary"
        android:defaultValue="true" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="qs_show_brightness_icon"
        android:title="@string/brightness_icon_title"
        android:summary="@string/brightness_icon_summary"
        android:dependency="qs_show_brightness"
        android:defaultValue="false" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="notification_guts_kill_app_button"
        android:title="@string/notification_guts_kill_app_button_title"
        android:summary="@string/notification_guts_kill_app_button_summary"
        android:defaultValue="false" />

    <com.liquid.liquidlounge.preferences.SecureSettingSwitchPreference
        android:key="lockscreen_qs_disabled"
        android:title="@string/lockscreen_qs_disabled_title"
        android:summary="@string/lockscreen_qs_disabled_summary"
        android:defaultValue="false" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:summary="@string/status_bar_quick_qs_pulldown_summary"
        android:defaultValue="false" />

    <com.liquid.liquidlounge.preferences.SecureSettingSwitchPreference
        android:key="quick_settings_vibrate"
        android:title="@string/quick_settings_vibrate_title"
        android:summary="@string/quick_settings_vibrate_summary"
        android:defaultValue="false" />

    <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
        android:key="qs_footer_warnings"
        android:title="@string/qs_footer_warnings_title"
        android:summary="@string/qs_footer_warnings_summary"
        android:defaultValue="true" />

    <ListPreference
        android:key="smart_pulldown"
        android:title="@string/smart_pulldown_title"
        android:entries="@array/smart_pulldown_entries"
        android:entryValues="@array/smart_pulldown_values"
        android:persistent="false" />

    <com.liquid.liquidlounge.preferences.CustomSeekBarPreference
        android:key="qs_panel_alpha"
        android:title="@string/qs_panel_alpha_title"
        android:max="255"
        settings:min="0"
        settings:units=""
        android:persistent="false" />

    <PreferenceCategory
        android:key="qs_animations"
        android:title="@string/qs_animations_cat">

	    <ListPreference
		    android:key="qs_tile_animation_style"
		    android:title="@string/qs_tile_animation_style_title"
		    android:entries="@array/qs_tile_animation_style_entries"
		    android:entryValues="@array/qs_tile_animation_style_values"
		    android:persistent="false" />

	    <ListPreference
		    android:key="qs_tile_animation_duration"
		    android:title="@string/qs_tile_animation_duration_title"
		    android:entries="@array/qs_tile_animation_duration_entries"
		    android:entryValues="@array/qs_tile_animation_duration_values"
		    android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_interpolator"
            android:title="@string/qs_tile_animation_interpolator_title"
            android:entries="@array/qs_tile_animation_interpolator_entries"
            android:entryValues="@array/qs_tile_animation_interpolator_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_custom_header"
        android:title="@string/custom_header_title">

        <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
            android:key="status_bar_custom_header"
            android:title="@string/status_bar_custom_header_title"
            android:defaultValue="false" />

        <com.liquid.liquidlounge.preferences.SystemSettingSwitchPreference
            android:key="qs_show_mini"
            android:title="@string/qs_show_mini_title"
            android:summary="@string/qs_show_mini_summary"
            android:dependency="status_bar_custom_header"
            android:defaultValue="false" />

        <ListPreference
            android:key="custom_header_provider"
            android:title="@string/custom_header_provider_title"
            android:persistent="false"
            android:entries="@array/custom_header_provider_entries"
            android:entryValues="@array/custom_header_provider_values"
            android:dependency="status_bar_custom_header" />

        <ListPreference
            android:key="daylight_header_pack"
            android:title="@string/daylight_header_pack_title"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

        <Preference
            android:key="custom_header_browse"
            android:title="@string/custom_header_pick_title"
            android:summary="@string/custom_header_pick_summary"
            android:persistent="false"
            android:dependency="status_bar_custom_header" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.PickHeaderActivity" />
        </Preference>
		
		<Preference
            android:key="file_header_select"
            android:title="@string/file_header_select_title"
            android:summary="@string/file_header_select_summary"
            android:persistent="false"
            android:dependency="status_bar_custom_header" >
        </Preference>

        <com.liquid.liquidlounge.preferences.CustomSeekBarPreference
            android:key="status_bar_custom_header_shadow"
            android:title="@string/status_bar_custom_header_shadow_title"
            android:summary="@string/status_bar_custom_header_shadow_summary"
            android:max="100"
            settings:min="0"
            settings:units="@string/unit_percent"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

    </PreferenceCategory>

</PreferenceScreen>
